fix: actually fix scrollbar coloring
forgot to remove any old variables. was also able to make it use variables across clients.

--- a/src/core/_variables.scss
+++ b/src/core/_variables.scss
@@ -84,9 +84,12 @@ html.theme-dark .theme-light .root_a28985,
     --background-tertiary: var(--primary-860) !important;
     --bug-reporter-modal-submitting-background: hsl(var(--primary-800-hsl)/0.6) !important;
 
-    // pretty much only applies to web/browser
     --scrollbar-auto-scrollbar-color-track: var(--primary-860) !important;
-    --scrollbar-auto-scrollbar-color-thumb: var(--background-secondary-alt) !important;
+    --scrollbar-auto-scrollbar-color-thumb: var(--primary-800) !important;
+    --scrollbar-auto-thumb: var(--primary-800) !important;
+    --scrollbar-auto-track: var(--primary-860) !important;
+    --scrollbar-thin-thumb: var(--primary-800) !important;
+    --scrollbar-thin-track: #000 !important;
 
     --button-outline-brand-background: hsl(var(--white-500-hsl)/0) !important;
     --button-outline-brand-text: var(--white-500) !important;
@@ -167,12 +170,7 @@ html.theme-dark .theme-light .root_a28985,
     --profile-gradient-role-pill-background: hsl(var(--primary-660-hsl)/0.5) !important;
     --profile-gradient-role-pill-border: hsl(var(--white-500-hsl)/0.2) !important;
     --profile-gradient-section-box: hsl(var(--black-500-hsl)/0.45) !important;
-    --scrollbar-auto-scrollbar-color-thumb: var(--primary-700) !important;
-    --scrollbar-auto-scrollbar-color-track: var(--primary-630) !important;
-    --scrollbar-auto-thumb: var(--primary-600) !important;
-    --scrollbar-auto-track: var(--primary-860) !important;
-    --scrollbar-thin-thumb: var(--primary-700) !important;
-    --scrollbar-thin-track: hsl(var(--black-500-hsl)/0) !important;
+
     --spoiler-hidden-background: var(--primary-700) !important;
     --spoiler-revealed-background: var(--primary-660) !important;
     --status-danger-text: var(--white-500) !important;
